Fixed bug #74866 extension_dir = "./ext" now use current directory for base